# 3dcv

./: README.md
calibrate/: CMakeLists.txt
calibrate/clouds/: schlemmdrik.ply
calibrate/config/: extrinsic_params  intrinsic_params  object_points
calibrate/include/: DavidScanner.hpp
calibrate/src/: DavidMain.cpp  DavidScanner.cpp  calibrate.cpp  david.cpp  excalibrate.cpp  find_laser.cpp  tester.cpp  tester_cool.cpp  tester_megacool.cpp  tester_yeah.cpp  texter.cpp
estimate_normals/: CMakeLists.txt
estimate_normals/config/: config.cfg
estimate_normals/include/: KDTree.hpp  Normal_Estimator.hpp
estimate_normals/src/: Estimate_Normals_Main.cpp  KDTree.cpp  Normal_Estimator.cpp
meshopt/: CMakeLists.txt  Meshopt.cpp
meshopt/include/: Edge.hpp  Face.hpp  HMesh.hpp  Vertex.hpp
meshopt/src/: .HMesh.cpp.swp  HMesh.cpp
polygonization/: CMakeLists.txt
polygonization/include/: DistanceFunction.hpp  Octree.hpp
polygonization/src/: DistanceFunction.cpp  Octree.cpp  Reconstruct.cpp
tabletop/: CMakeLists.txt  TabletopViewer.cpp
